# cfdi-descarga-masiva

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
sat_cfdi/: main.py
sat_cfdi/auth/: certificado.py  cliente.py  firma.py  soap.py
sat_cfdi/descarga/: __init__.py  cliente.py  constructor.py
sat_cfdi/modelos/: __init__.py
sat_cfdi/parser/: __init__.py  cfdi.py
sat_cfdi/solicitud/: __init__.py  cliente.py  constructor.py
sat_cfdi/verificacion/: __init__.py  poller.py
