[project]
name = "cfdi-descarga-masiva"
version = "0.1.0"
description = "Descarga masiva de CFDI del SAT México via Web Service oficial"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["sat", "cfdi", "mexico", "facturacion", "descarga-masiva"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "lxml>=5.0",
    "requests>=2.31",
    "cryptography>=42.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "click>=8.1",
]

[project.scripts]
cfdi-descarga-masiva = "sat_cfdi.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["sat_cfdi*"]
